2010-05-27 : switch version tagging from svn to git
2010-05-27 : fixed  abug in test patch number of NetCDF3 version i was using = instead of ==
2010-05-25 : trying a new way to store date in file names for Jamie. Probably going to be reverted
2010-05-24 : changed the way the final file name is constructed, uses time bounds if present, otherwise as before uses time values
2010-05-20 : tagging RC9
2010-05-20 : fixed a bug in python interface when converting zfactor bounds array from 2D to the required 1D.
2010-05-20 : "changed sign" was always written in history even when not necessary. Fixed
2010-05-20 : newer tables
2010-05-12 : CMIP5_fx add time dependency, fixed
2010-05-12 : user could pass any calendar name! Now has to match valid ones!
2010-05-11 : updated tables
2010-05-11 : created a xls2csv script MUCH improved my life when Karl changes tables from now on.
2010-05-11 : sigma coord and irregular girds: implemented
2010-05-11 : cmor_close now preserves the original  variable id
2010-05-11 : cmor_zfactor MUST have values if zfactor is not time dependent
2010-04-29 : updated repo to git
2010-04-27 : updated examples to reflect new required things
2010-04-27 : colored Makefile output for fortran testing, makes it eaiser to see what's being tested
2010-04-27 : API changes for Jamie, close_variable can now preserve a variable and redefine it for later use (new file) by user. See doc and test_python_max_variables_2.py for details.
2010-04-27 : when creating new variable, looks for the first available in the list instead of always adding one. This helps preventing users to run into "maximum number of variables" when opeing/closing a lot of files. See test_python_max_variables.py for details.
2010-04-27 : model_id must now match begining of source if CMIP5
2010-04-27 : institute_id is now required in tables
2010-04-27 : changed history from "reverted axes" to "inverted axis"
2010-04-27 : "hyphenized model_id has nor more "-" at the end