@@ -1,3 +1,6 @@
+2010-05-28 : reverted file name construction to use first/last time. BUT added precision for daily and higher frequencies
+2010-05-28 : fixed a bug in cmor checker when variable entry was "pop" would break
+2010-05-28 : fixed default values of noerror in script from True to cmor.CMOR_CRITICAL
 2010-05-27 : switch version tagging from svn to git
 2010-05-27 : fixed  abug in test patch number of NetCDF3 version i was using = instead of ==
 2010-05-25 : trying a new way to store date in file names for Jamie. Probably going to be reverted
